fix: text wrap pls

--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,8 @@
 /* @import url('https://fonts.googleapis.com/css?family=Manrope'); */
 @import url('https://fonts.googleapis.com/css?family=Inter:wght@100;200;300;400;500;600&display=swap');
 .home-page {
-    margin: 0;
-    word-wrap: break-word;
+    /* margin: 0; */
+    width: 75%;
     /* max-width: max-content; */
 }
 
